<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/cardview_dark_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/ManualToPicturePage"
            android:layout_width="180dp"
            android:layout_height="75dp"
            android:layout_marginBottom="140dp"
            android:fontFamily="monospace"
            android:text="@string/manual"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="#101010" />

        <Button
            android:id="@+id/AutomaticToPicturePage"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginBottom="208dp"
            android:fontFamily="monospace"
            android:text="@string/automatic"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="#101010" />

        <Button
            android:id="@+id/ToPastSessionsPage"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginBottom="68dp"
            android:fontFamily="monospace"
            android:text="@string/past_sessions"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="#101010" />

        <ImageButton
            android:id="@+id/Information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_dialog_info" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:text="@string/range_buddy"
            android:textColor="#ECECEC"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Login"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginTop="176dp"
            android:text="Login"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView3"
            android:contentDescription="@string/target"
            android:layout_width="170dp"
            android:layout_height="503dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/target_transparent_7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
